@@ -1,3 +1,12 @@
+ 2014-10-05 13:16  alexpeshkoff 
+   M src/dsql/make.cpp
+   M src/dsql/metd.epp
+Backported fix for CORE-4566: Incorrect size of the output parameter/argument when execute block, procedure or function use system field in metadata charset
+
+ 2014-10-05 10:03  alexpeshkoff 
+   M src/jrd/Collation.cpp
+Make it build with fresh gcc - added template functions declarations
+
  2014-09-17 13:00  paulbeach 
    M builds/posix/Makefile.in.firebird
    M builds/posix/prefix.darwin_i386
